# chat_bot_server_aladin

./: .dockerignore  .gitignore  ARCHITECTURE.md  CENTRALIZED_LOGGING_GUIDE.md  CLIENT_SETUP.md  DEPLOYMENT.md  DOCGRADER_COMPREHENSIVE_FIX_REPORT.md  DOCGRADER_DEBUG_SUMMARY.md  DOCGRADER_MENU_FIX_REPORT.md  Dockerfile  FACEBOOK_COMPREHENSIVE_FIX_COMPLETE.md  FACEBOOK_ENHANCED_FEATURES.md  FACEBOOK_ENHANCEMENT_SUMMARY.md  FACEBOOK_IMAGE_TEXT_ORDER_FIX.md  FACEBOOK_INTEGRATION.md  FACEBOOK_WEBHOOK_FIXES_SUMMARY.md  FILE_LOGGING_COMPLETE.md  HUMAN_IN_THE_LOOP_ANALYSIS.md  IMAGE_CONTEXT_TIMING_FIX.md  INTELLIGENT_PROFILE_SYSTEM_GUIDE.md  LOGGING_REFACTOR_COMPLETE.md  NGUYEN_TAC_VET_PROMT.MD  NO_GRADER_APPROACH.py  README.md  REASONING_DISPLAY_SUMMARY_FIX.md  REASONING_STEPS_FIX.md  REFACTOR_COMPLETE.md  REFACTOR_FINAL_SUMMARY.md  REFACTOR_FIXES_COMPLETE.md  SETUP_COMPLETE.md  SHIP_QUERY_FIX_SUMMARY.md  SILENT_COLLECTION_PRINCIPLES.md  THREADS_SEARCH_IMPLEMENTATION.md  TOOL_CALLING_FIX_COMPLETE.md  TOOL_CALLING_FIX_SUMMARY.md  TOOL_CALL_FIXES_SUMMARY.md  TOOL_CALL_IMPROVEMENT_AGENTS_PATTERN.md  USER_PROFILE_EXTRACTION_SYSTEM.md  app.py  booking.json  (+164 more)
back_up_chatbot_aladin/: ARCHITECTURE.md  BOOKING_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FACEBOOK_CHECKLIST.md  FACEBOOK_TOKEN_REFRESH.md  Huong_dan_lay_accessToken.md  PRODUCTION_CHECKLIST.md  README.md  REASONING_STEPS_FIX_SUMMARY.md  REFACTOR_PLAN.md  RESERVATION_INTEGRATION.md  alembic.ini  app.py  fabook_webhook_redis.md  git-quick.ps1  langgraph copy 2.json  langgraph copy.json  log-console.txt  next.config.js  (+4 more)
(+196 files in other folders)
